# vacancy_searcher

./: README.md  pyproject.toml
src/: abstract_classes.py  api.py  file_handler.py  functions.py  main.py  request.py  vacancy.py
tests/: tests_api.py  tests_file_handler.py  tests_functions.py  tests_vacancy_hh.py  tests_vacancy_sj.py
