[tool.poetry]
name = "vacancy-searcher"
version = "0.1.0"
description = ""
authors = ["ekaterinarogova <ekatersergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancy_searcher"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
