[tool.poetry]
name = "vacancy-searcher"
version = "0.1.0"
description = ""
authors = ["ekaterinarogova <ekatersergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancy_searcher"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
